idf_component_register( 
    SRCS    "wps.c"
            "main.c" 
            "sniffer.c" 
            "wifi_controller.c" 
            "ap_scanner.c" 
            "utils.c" 
            "scanner_advanced.c" 
            "wps.c" 
            "eapol_packet.c"
    INCLUDE_DIRS 
            ""
            "include"
)
